--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <strong>Technology</strong>
                     <p>정밀한 엔지니어링을 기반으로, 포르쉐는 주행 데이터를 분석해<br> 최적의 퍼포먼스를 구현합니다.
                     </p>
-                    <a href="#" class="btn_view">자세히보기</a>
+                    <a href="#" class="btn_view bk">자세히보기</a>
                 </div>
             </div>
         </section>
@@ -96,16 +96,21 @@
                 <div class="textbox">
                     <ul>
                         <li>
-                            <strong></strong>
-                            <p>정밀정교한 엔지니어링과 파워트레인이
+                            <strong>Performance</strong>
+                            <p>정밀정교한 엔지니어링과 파워트레인이<br>
                                 포르쉐만의 압도적인 주행 감각을 
                                 완성합니다.</p>
                         </li>
                         <li>
-                            <strong></strong>
-                            <p>정밀정교한 엔지니어링과 파워트레인이
-                                포르쉐만의 압도적인 주행 감각을 
-                                완성합니다.</p>
+                            <strong>Innovation</strong>
+                            <p>전동화와 디지털 기술을 기반으로<br>
+                                미래의 주행 경험을 한층 더 진화시킵니다.</p>
+                        </li>
+                        <li>
+                            <strong>Design</strong>
+                            <p>정아이코닉한 실루엣과 정제된 디테일이<br>
+                                포르쉐의 고유한 아름다움을 표현합니다.
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -115,10 +120,38 @@
         </section>
 
         <section class="section3">
-            <a href="#" class="btn_view bk">자세히보기</a>
+        <div class="container">
+            <h2>Discover</h2>
+
+            <ul class="content">
+                <li>
+                    <a href="#">
+                        <figure><img src="images/sec3_img1.png" alt=""></figure>
+                        <span class="ex">Porsche E-Performance</span>
+                        <p>포르쉐 전동 퍼포먼스의 새로운 기준</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure><img src="images/sec3_img2.png" alt=""></figure>
+                        <span class="ex">Porsche E-Performance</span>
+                        <p>포르쉐 전동 퍼포먼스의 새로운 기준</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <figure><img src="images/sec3_img3.png" alt=""></figure>
+                        <span class="ex">Porsche E-Performance</span>
+                        <p>포르쉐 전동 퍼포먼스의 새로운 기준</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </section>
     </div>
-    <footer></footer>
+    <footer>
+            <h1><img src="images/loglo_footer.png" alt=""></h1>
+    </footer>
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
